Prevent jump on modal open/close

--- a/src/components/ui/Modal.scss
+++ b/src/components/ui/Modal.scss
@@ -1,134 +1,136 @@
 body:has(.Modal.Visible) {
-	overflow: hidden;
+  pointer-events: none;
+  overflow: hidden !important;
+  overscroll-behavior: contain;
+  margin-right: 8px;
 }
 
 .Modal {
+  &:not(.Visible) {
+    display: none;
+    animation: modal-fadeout-wrapper .15s ease-out forwards;
 
-	&:not(.Visible) {
-		display: none;
-		animation: modal-fadeout-wrapper .15s ease-out forwards;
+    .AnimatedModalContent {
+      animation: modal-fadeout .25s ease-out;
+    }
 
-		.AnimatedModalContent {
-			animation: modal-fadeout .25s ease-out;
-		}
+    @keyframes modal-fadeout-wrapper {
+      from {
+        display: grid;
+      }
+      to {
+        display: none;
+        opacity: 0;
+      }
+    }
 
-		@keyframes modal-fadeout-wrapper {
-			from {
-				display: grid;
-			}
-			to {
-				display: none;
-				opacity: 0;
-			}
-		}
+    @keyframes modal-fadeout {
+      to {
+        transform: scale(.9);
+        opacity: 0;
+      }
+    }
+  }
 
-		@keyframes modal-fadeout {
-			to {
-				transform: scale(.9);
-				opacity: 0;
-			}
-		}
-	}
+  &.Visible {
+    .AnimatedModalContent {
+      animation: modal-fadein .3s ease-out;
+    }
 
-	&.Visible {
-		.AnimatedModalContent {
-			animation: modal-fadein .3s ease-out;
-		}
+    @keyframes modal-fadein {
+      from {
+        transform: scale(.95) rotate(2deg);
+        opacity: 0;
+      }
+      33% {
+        opacity: 1;
+      }
+      75% {
+        transform: scale(1.01) rotate(-0.5deg);
+      }
+    }
+  }
 
-		@keyframes modal-fadein {
-			from {
-				transform: scale(.95) rotate(2deg);
-				opacity: 0;
-			}
-			33% {
-				opacity: 1;
-			}
-			75% {
-				transform: scale(1.01) rotate(-0.5deg);
-			}
-		}
-	}
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  background: rgba(0, 0, 0, .5);
+  pointer-events: auto;
+  z-index: 1;
 
-	position: fixed;
-	width: 100%;
-	height: 100vh;
-	display: grid;
-	place-items: center;
-	background: rgba(0, 0, 0, .5);
+  .DefaultModalContent {
+    background: var(--background-popup);
+    padding: 25px 65px;
+    width: 55%;
+    max-height: 70%;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    overflow: hidden;
 
-	z-index: 1;
+    @media (max-width: 850px) {
+      width: 65%;
+    }
 
-	.DefaultModalContent {
-		background: var(--background-popup);
-		padding: 25px 65px;
-		width: 55%;
-		max-height: 70%;
-		border-radius: 15px;
-		display: flex;
-		flex-direction: column;
-		gap: 20px;
-		overflow: hidden;
+    @media (max-width: 650px) {
+      width: 90%;
+      max-height: 82%;
+      padding: 20px 25px;
+      box-sizing: border-box;
+    }
+  }
 
-		@media (max-width: 850px) {
-			width: 65%;
-		}
+  .Buttons {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    margin-top: auto;
 
-		@media (max-width: 650px) {
-			width: 90%;
-			max-height: 82%;
-			padding: 20px 25px;
-			box-sizing: border-box;
-		}
-	}
+    @media (max-width: 400px) {
+      gap: 7px;
+    }
 
-	.Buttons {
-		display: flex;
-		gap: 15px;
-		justify-content: center;
-		margin-top: auto;
+    .Button {
+      padding: 4px 12px;
+      border-radius: 6px;
+      font-family: "Poppins", sans-serif;
+      font-size: 16px;
+      color: var(--text-primary);
+      user-select: none;
+      cursor: pointer;
+      background: var(--background-popup-secondary);
+      display: flex;
+      align-items: center;
+      gap: 8px;
 
-		@media (max-width: 400px) {
-			gap: 7px;
-		}
+      @media (max-width: 650px) {
+        font-size: 14px;
+      }
 
-		.Button {
-			padding: 4px 12px;
-			border-radius: 6px;
-			font-family: "Poppins", sans-serif;
-			font-size: 16px;
-			color: var(--text-primary);
-			user-select: none;
-			cursor: pointer;
-			background: var(--background-popup-secondary);
-			display: flex;
-			align-items: center;
-			gap: 8px;
+      transition: transform .25s ease, filter .1s ease;
 
-			@media (max-width: 650px) {
-				font-size: 14px;
-			}
+      &:not(.Disabled):hover {
+        transform: translateY(2px);
+        filter: drop-shadow(1px 2px 5px rgba(0, 0, 0, .25));
+      }
 
-			transition: transform .25s ease, filter .1s ease;
+      &.Save {
+        background: var(--action-success) !important;
+      }
 
-			&:not(.Disabled):hover {
-				transform: translateY(2px);
-				filter: drop-shadow(1px 2px 5px rgba(0, 0, 0, .25));
-			}
+      &.Remove {
+        background: var(--action-fail) !important;
+      }
 
-			&.Save {
-				background: var(--action-success) !important;
-			}
-
-			&.Remove {
-				background: var(--action-fail) !important;
-			}
-
-			&.Disabled {
-				filter: brightness(50%);
-				cursor: not-allowed;
-			}
-		}
+      &.Disabled {
+        filter: brightness(50%);
+        cursor: not-allowed;
+      }
+    }
 
 
-	}
+  }
 }
